# project

./: .gitignore  README.md
Attempts/JSON_and_Conan/: README.md  build.sh
Attempts/proj_new/: CMakeLists.txt  build.sh  main.cpp
Attempts/qt_w_libs/: mainwindow.cpp  mainwindow.ui  res.qrc
Attempts/try_qt/: todolist.h
JSON_and_Conan/: CMakeLists.txt  conanfile.txt  try_json.cpp
JSON_and_Conan/ToDo/: ToDo_to.txt
Todoler/: CMakeLists.txt  Delegate.cpp  Delegate.h  Delegate_p.h  MainWindow.cpp  MainWindow.h  MessageList.cpp  MessageList.h  json.h  main.cpp  resources.qrc  resources.qrc.save  server.h
proj_new/: CMakeCache.txt  CMakeLists.txt.autosave
qt_w_libs/: CMakeLists.txt  json.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  res.qrc  server.h
try_imgui/: CMakeLists.txt  build.sh  conanfile.txt  main.cpp  server.h  try_json.h
try_qt/: hse_prpject.pro  main.cpp  res.qrc  todolist.cpp  todolist.ui
